--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "react-select-country-list": "^2.2.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
