--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "react-select-country-list": "^2.2.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
