--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
+    "react-hot-toast": "^2.5.2",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
